[project]
name = "customer-support-env"
version = "0.1.0"
description = "Customer support environment using OpenEnv"
authors = [
    { name = "Yash" }
]

dependencies = [
    "fastapi",
    "uvicorn",
    "openai",
    "openenv>=0.2.0"
]

[project.scripts]
server = "server.app:main"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
